[gd_scene load_steps=3 format=3 uid="uid://dtbr5lbl3r8fp"]

[ext_resource type="Texture2D" uid="uid://k8wri5abh1us" path="res://icons/x.svg" id="1"]
[ext_resource type="Script" uid="uid://cqbm3iwmv0pki" path="res://scripts/ComponentButton.gd" id="2"]

[node name="systemButton" type="ColorRect"]
custom_minimum_size = Vector2(50, 50)
offset_right = 50.0
offset_bottom = 50.0
size_flags_horizontal = 3
color = Color(0.0745098, 0.0352941, 0.239216, 1)
script = ExtResource("2")

[node name="icon" type="Sprite2D" parent="."]
position = Vector2(25, 25)
texture = ExtResource("1")

[connection signal="gui_input" from="." to="." method="_on_systemButton_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_systemButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_systemButton_mouse_exited"]
